// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imperative-test-cli config list should list the configuration 1`] = `
"profiles: 
  my_profiles: 
    properties: 
    profiles: 
      secured: 
        type:       secured
        properties: 
          info: 
  my_base: 
    type:       base
    properties: 
defaults: 
  secured: my_profiles.secured
  base:    my_base
plugins: 
  (empty array)
secure: 
  (empty array)
"
`;

exports[`imperative-test-cli config list should list the defaults configuration property 1`] = `
"secured: my_profiles.secured
base:    my_base
"
`;

exports[`imperative-test-cli config list should list the profiles configuration property 1`] = `
"my_profiles: 
  properties: 
  profiles: 
    secured: 
      type:       secured
      properties: 
        info: 
my_base: 
  type:       base
  properties: 
"
`;

exports[`imperative-test-cli config list should list the root level property names only 1`] = `
"profiles
defaults
plugins
secure
"
`;

exports[`imperative-test-cli config list should not list the secure configuration property 1`] = `""`;
